# TokenCounter

./: .gitignore  CLAUDE_AI_EXTENSION.md  README.md  pyproject.toml
tokencounter/: alerts.py  api_usage.py  cli.py  config.py  counter.py  display.py  forecast.py  storage.py  tracker.py
