[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokencounter"
version = "0.1.0"
description = "Token usage transparency for Claude users"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "plotext>=5.2.0",
]

[project.scripts]
tc = "tokencounter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tokencounter"]
